# IMP

./: .gitignore  .prettierignore  README.md  ROADMAP.md  docker-compose.yml  imp-stack.yml  mariadb-stack.yml  package.json  template.env  tsconfig.json  tsconfig.old.json
docs/: index.html  modules.html
docs/assets/: search.js
docs/interfaces/: interfaces_IIMPImage.IIMPImage.html  interfaces_IIMPNumber.IIMPNumber.html  interfaces_IIMPProduct.IIMPProduct.html  interfaces_IIMPState.IIMPState.html  interfaces_IIMPString.IIMPString.html  interfaces_actionInterfaces_authorization_IChangeLoginAction.IChangeLoginAction.html  interfaces_actionInterfaces_cart_IPurchaseCartAction.IPurchaseCartAction.html  interfaces_actionInterfaces_core_IApplicationStartAction.IApplicationStartAction.html  interfaces_actionInterfaces_core_IChangeAppearanceAction.IChangeAppearanceAction.html  interfaces_actionInterfaces_core_IUseNavBarAction.IUseNavBarAction.html  interfaces_actionInterfaces_database_IRefreshDatabaseAction.IRefreshDatabaseAction.html  interfaces_actionInterfaces_database_IUpdateDatabaseAction.IUpdateDatabaseAction.html  interfaces_actionInterfaces_history_IRedoAction.IRedoAction.html  (+18 more)
public/: App.css  index.html  manifest.json  onlyLayout.css
scripts/: build-toolchain-from-source.sh
src/: index.tsx  react-app-env.d.ts
src-api/: Dockerfile  api.old  api.ts  impAPI.ts  index.ts  nodemon.json  package.json  tsconfig.json
src-api/src/: index.ts  (+7 more)
src-bin/: tauri.conf.json
src-tauri/: Cargo.toml  tauri.conf.json
src-ui/: Dockerfile  index.tsx
tauri/: Cargo.toml  tauri.conf.json
(+689 files in other folders)
