[package]
name = "inventory-management-platform"
version = "0.9.0"
description = "Inventory Management Platform"
authors = ["Brandon Shockley"]
license = ""
repository = "https://github.com/Zindrek/IMP"
default-run = "inventory-management-platform"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rustfmt = { version = "0.10.0" }
tauri-build = { version = "1.0.0-rc.7", features = [] }

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
tauri = { version = "1.0.0-rc.8", features = ["updater"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
